--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <title>Anxiety Support</title>
     <link rel="stylesheet" type="text/css" href="app.css">
+    <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Open+Sans:400,700">
   </head>
   <body>
     <header>
@@ -61,6 +62,14 @@
             <input type="radio" name="question2" value="not at all"> Not at all
             <input type="radio" name="question2" value="slightly"> Slightly
             <input type="radio" name="question2" value="significantly"> Significantly
+          <label>Question 3: How often do you feel nervous?</label>
+            <input type="radio" name="question3" value="rarely"> Rarely
+            <input type="radio" name="question3" value="sometimes"> Sometimes
+            <input type="radio" name="question3" value="frequently"> Frequently
+          <label>Question 4: How often do you feel restless or on edge?</label>
+            <input type="radio" name="question4" value="rarely"> Rarely
+            <input type="radio" name="question4" value="sometimes"> Sometimes
+            <input type="radio" name="question4" value="frequently"> Frequently
           <input type="submit" value="Submit">
         </form>
       </section>
