--- a/index.html
+++ b/index.html
@@ -7,19 +7,6 @@
 <body>
 
 <h1>Anxiety Quiz</h1>
-
-<form id="quiz-form">
-  <p>1. Do you often feel nervous or on edge?</p>
-  <input type="radio" name="question1" value="yes"> Yes
-  <input type="radio" name="question1" value="no"> No
-
-  <p>2. Do you have difficulty sleeping?</p>
-  <input type="radio" name="question2" value="yes"> Yes
-  <input type="radio" name="question2" value="no"> No
-
-  <p>3. Do you feel tired or have low energy?</p>
-  <input type="radio" name="question3" value="yes"> Yes
-  <input type="radio" name="question3" value="no"> No
   <form id="quiz-form">
     <p>1. Do you often feel nervous or on edge?</p>
     <input type="radio" name="question1" value="yes"> Yes
@@ -73,6 +60,18 @@
 
 <p id="results"></p>
 <div id="progress-bar"></div>
+<div id="resources">
+  <h2>Resources</h2>
+  <ul>
+    <li><a href="https://www.anxiety.org/">Anxiety and Depression Association of America</a></li>
+    <li><a href="https://www.mentalhealth.gov/">U.S. Department of Health and Human Services</a></li>
+    <li><a href="https://www.nimh.nih.gov/health/topics/anxiety-disorders/">National Institute of Mental Health</a></li>
+    <li><a href="https://www.helpguide.org/articles/anxiety/">Helpguide.org</a></li>
+    <li><a href="https://www.psychologytoday.com/us/therapists/anxiety">Psychology Today</a></li>
+    <li>Hotline: 1-800-273-TALK (8255)</li>
+  </ul>
+</div>
+
 
 
 </body>
